[package]
name = "mcl_derive"
version = "0.2.3-alpha"
authors = ["Adam Budziak <adambudziak@protonmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/adambudziak/rust_mcl"
description = "Rust FFI bindings for the MCL pairing-based cryptography."
documentation = "https://docs.rs/mcl"
readme = "./README.md"
keywords = ["pairing", "crypto", "elliptic", "bls12_381"]
categories = ["cryptography", "api-bindings"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#
[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["extra-traits"] }
quote = "1.0"
